# keyboard-locker

./: main.py  pyproject.toml
keyboard_locker/: controller.py  main.py  ui.py
keyboard_locker/platform/: linux.py  windows.py
