[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyboard-locker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pyqt5>=5.15.11",
    "pystray>=0.19.5",
]

[tool.hatch.build.targets.wheel]
packages = ["keyboard_locker"]
